fix(@clayui/css): Links change spacing between text and icon back to 8px

--- a/packages/clay-css/src/scss/cadmin/variables/_globals.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_globals.scss
@@ -703,16 +703,6 @@ $cadmin-link: map-deep-merge(
 			color: $cadmin-link-hover-color,
 			text-decoration: $cadmin-link-hover-decoration,
 		),
-		inline-item-before: (
-			margin-right: 4px,
-		),
-		inline-item-middle: (
-			margin-left: 4px,
-			margin-right: 4px,
-		),
-		inline-item-after: (
-			margin-left: 4px,
-		),
 	),
 	$cadmin-link
 );
